[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jafitEgea <jafit2015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.32"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
argon2 = "^0.1.10"
email-validator = "^1.1.3"
argon2-cffi = "^21.3.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
